feat: 实现用户管理、角色权限管理及相关API文档
refactor(权限服务): 重构权限校验逻辑，支持动态菜单权限校验
feat(用户服务): 新增用户分页查询和详情接口
feat(角色服务): 完善角色增删改查及菜单分配功能
docs: 添加用户管理和角色权限管理的API文档
fix(菜单服务): 修复菜单分配时的用户ID获取问题